--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
-*.html linguist-detectable=false
+* linguist-vendored
+*.js linguist-vendored=false
+
+*.html linguist-detectable=false,
 *.css linguist-detectable=false
+
+static/* linguist-vendored
