--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
-*.* linguist-language=JavaScript
+*.js linguist-detectable=true
+*.css linguist-detectable=false
+*.html linguist-detectable=false
+*.xml linguist-detectable=false
